support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_namespace_aliasundef.i
%module xxx

namespace B = blah;
